--- a/frontEnd/front/src/assets/i18n/FR.json
+++ b/frontEnd/front/src/assets/i18n/FR.json
@@ -1,4 +1,8 @@
 {
     "bannerIntro" : "Outil numérique pour la prrévision saisonnière des débits de cours d’eau à l’échelle de la Bretagne",
-    "homeIntro" : "Accueil fonctionne"
+    "homeIntro" : "Accueil fonctionne",
+    "home" : "Accueil",
+    "data" : "Données et Modélisation",
+    "settings" : "Paramètres",
+    "login" : "Se connecter"
 }
