feats: add bootstrap

--- a/frontEnd/front/src/assets/i18n/EN.json
+++ b/frontEnd/front/src/assets/i18n/EN.json
@@ -4,5 +4,6 @@
     "home" : "Home",
     "data" : "Data and Modeling",
     "settings" : "Settings",
-    "login" : "Log in"
+    "login" : "Log in",
+    "select_modeling" : "Sélection du bassin versant"
 }
