--- a/frontEnd/front/src/assets/i18n/FR.json
+++ b/frontEnd/front/src/assets/i18n/FR.json
@@ -4,5 +4,6 @@
     "home" : "Accueil",
     "data" : "Données et Modélisation",
     "settings" : "Paramètres",
-    "login" : "Se connecter"
+    "login" : "Se connecter",
+    "select_modeling" : "Sélection du bassin versant"
 }
