--- a/frontEnd/front/src/assets/i18n/EN.json
+++ b/frontEnd/front/src/assets/i18n/EN.json
@@ -5,5 +5,6 @@
     "data" : "Data and Modeling",
     "settings" : "Settings",
     "login" : "Log in",
-    "select_modeling" : "Sélection du bassin versant"
+    "select_modeling" : "Sélection du bassin versant",
+    "homeTitle" : "Presentation of project <u> CYCDE </u>"
 }
