--- a/frontEnd/front/src/assets/i18n/FR.json
+++ b/frontEnd/front/src/assets/i18n/FR.json
@@ -5,5 +5,6 @@
     "data" : "Données et Modélisation",
     "settings" : "Paramètres",
     "login" : "Se connecter",
-    "select_modeling" : "Sélection du bassin versant"
+    "select_modeling" : "Sélection du bassin versant",
+    "homeTitle" : "Présentation du projet <u> CYCDE </u>"
 }
