--- a/frontEnd/front/src/assets/i18n/EN.json
+++ b/frontEnd/front/src/assets/i18n/EN.json
@@ -6,5 +6,5 @@
     "settings" : "Settings",
     "login" : "Log in",
     "select_modeling" : "Sélection du bassin versant",
-    "homeTitle" : "Presentation of project <u> CYCDE </u>"
+    "homeTitle" : "Presentation of the <strong> CYDRE </strong> project"
 }
