--- a/frontEnd/front/src/assets/i18n/FR.json
+++ b/frontEnd/front/src/assets/i18n/FR.json
@@ -6,5 +6,5 @@
     "settings" : "Paramètres",
     "login" : "Se connecter",
     "select_modeling" : "Sélection du bassin versant",
-    "homeTitle" : "Présentation du projet <u> CYCDE </u>"
+    "homeTitle" : "Présentation du projet <strong> CYDRE </strong>"
 }
