added translation for settings page

--- a/frontEnd/front/src/assets/i18n/EN.json
+++ b/frontEnd/front/src/assets/i18n/EN.json
@@ -14,5 +14,26 @@
     "submit" : "Submit",
     "modelingTitle" : "Explore the <span class=\"highlight\">data</span> and <span class=\"highlight\">modeling</span> by choosing the watershed and one of the fields below",
     "settingsTitle" : "<span class=\"highlight\">Update</span> your account",
-    "loginTitle" : "<span class=\"highlight\">Log in</span> to access your account"
+    "loginTitle" : "<span class=\"highlight\">Log in</span> to access your account",
+    "profilePicture" : "Profile Picture",
+    "uploadImg" : "Upload new image",
+    "accountDetails" : "Account Details",
+    "inputUsername" : "Enter your username",
+    "firstname" : "First name",
+    "inputFirstname" : "Enter your first name",
+    "lastname" : "Last name",
+    "inputLastname" : "Enter your last name",
+    "organizationname"  : "Organization name",
+    "inputOrganizationname" : "Enter your organization name",
+    "location" : "Location",
+    "inputLocation" : "Enter your location",
+    "emailAddress" : "Email address",
+    "inputEmailAdress" : "Enter your email adress",
+    "phoneNumber" : "Phone number",
+    "inputPhoneNumber" : "Enter your phone number",
+    "birthday" : "Birthday",
+    "inputBirthday" : "Enter your birthday",
+    "saveChanges" : "Save changes",
+    "cancel" : "Cancel",
+    "modify" : "Modify"
 }
