change banner welcome when logged in

--- a/frontEnd/front/src/assets/i18n/EN.json
+++ b/frontEnd/front/src/assets/i18n/EN.json
@@ -35,5 +35,6 @@
     "inputBirthday" : "Enter your birthday",
     "saveChanges" : "Save changes",
     "cancel" : "Cancel",
-    "modify" : "Modify"
+    "modify" : "Modify",
+    "bannerWelcome" : "Hello Mr.NGUYEN !"
 }
